# CST_MCP

./: .gitignore  AGENTS.md  MEMORY.md  README.md  advanced_mcp.py  cst_results_mcp.py  opencode.json  pyproject.toml  requirements.txt
.opencode/skills/cst-simulation-optimization/: SKILL.md
cst_runtime/: cli.py  process_cleanup.py
docs/: 2026-04-20-work-handoff.md  2026-04-23-ref0-fresh-session-farfield-validation.md  2026-04-23-trae-cli-feedback-triage.md  2026-04-23-trae-ref0-cli-low-context-validation.md  cst-runtime-agent-usage.md  cst-runtime-native-pipeline.md  current-priority-checklist.md  optimization_plan.md  project-goals-and-plan.md  project-layout.md  topic-index.md  trae-ref0-cli-low-context-prompt.md
docs/plans/: 2026-03-31-antenna-optimizer-dev-guide.md  2026-04-03-plan-evolution.md
docs/plans/logs/: 2026-04-03.md
mcp/: advanced_mcp.py
skills/cst-runtime-cli/: SKILL.md
skills/cst-runtime-cli-optimization/: SKILL.md
skills/cst-runtime-cli/scripts/cst_runtime/: __init__.py  cst_env.py  run_workspace.py
skills/cst-runtime-cli/scripts/cst_runtime/cli/: __init__.py  dispatch.py
skills/cst-runtime-cli/scripts/cst_runtime/core/: audit.py  environment.py  evidence.py  farfield.py  identity.py  modeling.py  process.py  project.py  results.py  session.py  utils.py  workspace.py
skills/cst-runtime-cli/tests/: test_cli_contract.py  test_farfield_analysis.py  test_pipelines.py  test_render.py
skills/cst-runtime-optimization/: SKILL.md
tools/: cleanup_cst.ps1  close_cst_by_name.ps1  find_cst.ps1  kill_cst.ps1  sync_opencode_skills.ps1
(+17 files in other folders)
