[project]
name = "cst-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cst-studio-suite-link",
    "mcp[cli]>=1.25.0",
]

[tool.uv.sources]
cst-studio-suite-link = { path = "C:\\Program Files\\CST Studio Suite 2026\\AMD64\\python_cst_libraries", editable = true }
